# echo-TTS

./: .env.example  .gitignore  CONNECTION_STABILITY_FIX.md  DISCONNECT_VERIFICATION_COMPLETE.md  DISTRIBUTION_COMPLETE.md  DISTRIBUTION_GUIDE.md  INSTALLER_DISTRIBUTION_GUIDE.md  LICENSE  OBS_INTEGRATION_GUIDE.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_GUIDE.md  PRIVACY.md  README.md  clear-demo-modes.js  electron-builder-fresh.json  electron-builder.json  index.html  index.js  package-lock.json  package-scripts.json  package.json  start-optimized.bat  tailwind.config.ts  test-alerts.html  test-alerts.js  test-connection-stability.js  test-disconnect-fix.js  validate-performance.ps1  vite.config.ts
electron/: main.js  performance-optimizer.js  preload.js
public/: manifest.json  service-worker.js
scripts/: build-optimized.js  cleanup.js  copy-dist.js  optimize-startup.js  test-performance.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  oauth_callback.html  tauri.conf.json
src-tauri/src/: alerts.rs  lib.rs  oauth.rs
src/components/: AlertNotification.tsx  AlertSettings.tsx  ApiKeyInput.tsx  ChatConnections.tsx  ConnectionStatusPanel.tsx  Loading.tsx  MessageHistory.tsx  MessageInput.tsx  TwitchOAuthButton.tsx  VolumeControl.tsx  YouTubeOAuthButton.tsx
src/config/: security.ts
src/hooks/: use-toast.ts
src/lib/: lazy-loading.tsx  performance-monitor.ts  tauri-api.ts
src/pages/: Index.tsx  Login.tsx  NotFound.tsx
src/services/: alertsService.ts  ttsService.ts  twitchService.ts  youtubeService.ts
(+3 files in other folders)
